--- a/pagician-extension/manifest.json
+++ b/pagician-extension/manifest.json
@@ -7,7 +7,8 @@
     "activeTab",
     "storage",
     "scripting",
-    "contextMenus"
+    "contextMenus",
+    "sidePanel"
   ],
   "host_permissions": ["<all_urls>"],
   "background": {
@@ -15,16 +16,27 @@
   },
   "content_scripts": [{
     "matches": ["<all_urls>"],
-    "js": ["content-script.js"],
+    "js": [
+      "lib/logger.js",
+      "lib/audio-capture.js",
+      "lib/speech-processor.js",
+      "lib/prompts.js",
+      "lib/command-processor.js",
+      "lib/element-detector.js",
+      "lib/dom-manipulator.js",
+      "content-script.js"
+    ],
     "run_at": "document_idle"
   }],
   "action": {
-    "default_popup": "popup/popup.html",
     "default_icon": {
       "16": "assets/icons/icon16.png",
       "48": "assets/icons/icon48.png",
       "128": "assets/icons/icon128.png"
     }
+  },
+  "side_panel": {
+    "default_path": "sidepanel/sidepanel.html"
   },
   "options_page": "options/options.html",
   "icons": {
@@ -38,6 +50,5 @@
   "web_accessible_resources": [{
     "resources": ["assets/icons/*.png"],
     "matches": ["<all_urls>"]
-  }],
-  "privacy_policy": "https://raw.githubusercontent.com/ciaraadkins/page-puppet/main/PRIVACY_POLICY.md"
+  }]
 }
